fixed mobile navbar, footer, and spacing on team-text

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,14 +1,14 @@
 /*
-* Responsive layout for Patti 
+* Responsive layout for Patti
 */
 
 /* Table of Contents
 ==================================================
 
     #Mobile - 240px
-    #Mobile - 320px	
-    #Mobile - 480px	
-	#Tablet - 768px	
+    #Mobile - 320px
+    #Mobile - 480px
+	#Tablet - 768px
 	*/
 
 
@@ -20,17 +20,17 @@
 	html #wrapper {
 		width:240px;
 		margin:0 auto;
-	}	
+	}
 
 	.centered-wrapper {
 		width:220px;
 		padding:0 10px;
-	}	
+	}
 
 	.tparrows {
 		display:none;
 	}
-	
+
 	.tp-bullets {
 		display:none;
 	}
@@ -52,13 +52,13 @@
 	h1 {
 		font-size:24px;
 		line-height:30px;
-		margin-bottom:13px;	
+		margin-bottom:13px;
 	}
 
 	h2 {
 		font-size:18px;
-		line-height:24px;	
-		margin-bottom:20px;	
+		line-height:24px;
+		margin-bottom:20px;
 	}
 
 	h3 {
@@ -79,12 +79,12 @@
 		margin: 10px 20px;
 		padding: 0 0 5px 10px;
 	}
-	
+
 	.portfolio li.item-wide h1 {
 		font-size:20px;
 		line-height:28px;
 	}
-	
+
 	.portfolio li.item-long h1 {
 		font-size:14px;
 	}
@@ -92,14 +92,14 @@
 	div.jp-audio div.jp-type-single div.jp-progress, div.jp-duration {
 		display:none;
 	}
-	
+
 	.author-bio {
 		padding:15px;
 	}
 
 	.authorp {
 		width:100%;
-	
+
 		margin-top: 10px;
 }
 
@@ -110,9 +110,9 @@
 	.author-bio img {
 		margin: 0 15px 0 0;
 	}
-	
+
 	.commentwrap {
-		margin: 0 0 0 80px; 
+		margin: 0 0 0 80px;
 	}
 
 	.avatar img {
@@ -124,15 +124,15 @@
 		width:60px;
 		height:60px;
 	}
-	
+
 	.contact-info {
 		margin-bottom:30px;
 	}
-	
+
 	.single-post .widget {
 		margin-top:40px;
 		margin-bottom:0px;
-	}	
+	}
 
 	.separator {
 		width:100%;
@@ -148,14 +148,14 @@
 		clear:both;
 		margin:30px 0;
 	}
-	
+
 	ul#social {
 		margin:30px 0 10px;
 	}
 
 }
 
-	
+
 /*  #Mobile - 320px
 ================================================== */
 
@@ -173,12 +173,12 @@
 	.centered-wrapper {
 		width:300px;
 		padding:0 10px;
-	}	
+	}
 
 	.tparrows {
 		display:none;
 	}
-	
+
 	.tp-bullets {
 		display:none;
 	}
@@ -201,7 +201,7 @@
 		font-size:20px;
 		line-height:28px;
 	}
-	
+
 	.portfolio li.item-long h1 {
 		font-size:18px;
 	}
@@ -213,7 +213,7 @@
 		width: 25% !important;
 		left: 34% !important;
 	}
-	
+
 	.widget {
 		margin-bottom:0;
 		margin-top:30px;
@@ -225,11 +225,11 @@
 
 	.author-bio img {
 		margin: 0 15px 0 0;
-	
+
 		width: 13%;
 }
-	
-	
+
+
 	ul#social {
 		margin:30px 0 10px;
 	}
@@ -244,23 +244,23 @@
 
 	html #wrapper {
 		width:480px;
-	
+
 		margin: 0 auto;
 }
 
 	html #footer {
 		width:480px;
-	}		
+	}
 
 	.centered-wrapper {
 		width:460px;
 		padding:0 10px;
-	}	
+	}
 
 	.tparrows {
 		display:none;
 	}
-	
+
 	.tp-bullets {
 		display:none;
 	}
@@ -279,7 +279,7 @@
 		font-size:20px;
 		line-height:28px;
 	}
-	
+
 	.portfolio li.item-long h1 {
 		font-size:14px;
 	}
@@ -304,7 +304,7 @@
 	.author-bio img {
 		margin: 0 15px 0 0;
 	}
-	
+
 	ul#social {
 		margin:30px 0 10px;
 	}
@@ -346,7 +346,7 @@
 		float: left;
 		min-height:1px;
 	}
-		
+
 	html #wrapper {
 		width:768px;
 		margin:0 auto;
@@ -355,7 +355,7 @@
 	.centered-wrapper {
 		width: 748px;
 		padding: 0 10px;
-	}	
+	}
 
 	ul#social {
 		float: right;
@@ -366,7 +366,7 @@
 	ul#social li {
 		display: inline-block;
 	}
-	
+
 	.on-three-columns .jp-duration {
 		display: none;
 	}
@@ -387,10 +387,10 @@
 	.centered-wrapper {
 		width: 1004px;
 		padding: 0 10px;
-	}		
+	}
 }
 
-@media only screen and (max-width: 767px) { 
+@media only screen and (max-width: 767px) {
 
 	.percent-one-half { width: 100%; }
 	.percent-one-third { width: 100%; }
@@ -412,28 +412,28 @@
 		min-height:1px;
 		margin-bottom:20px;
 	}
-	
+
 
 	ul#filters li {
 		margin: 0 5px 15px 0;
 		float: left;
-	}	
+	}
 
 	.pricing-column.cols-4 {
 		width: 100%;
 		margin-bottom: 20px;
 	}
-	
+
 	.package-value, .package-features, .pricing-column .signup {
 		border-left: 1px solid #DBDBDB;
 	}
-	
+
 	ul#social li a {
 		margin: 0 10px;
 	}
-	
+
 	#bottomfooter p {
-		text-align: center;
+		text-align: left;
 		float: none;
 	}
 }
@@ -444,7 +444,7 @@
 		overflow: hidden;
 		position: absolute;
 		width: 1px;
-		height: 1px;		
+		height: 1px;
 	}
 }
 
@@ -462,20 +462,20 @@
 
 	ul.tabs li {
     width: 100%;
-	
-	
+
+
 }
-	
+
 	ul.tabs li a {
     border: 1px solid #efefef;
-		
-	
+
+
     padding-top: 15px;
     padding-bottom: 15px;
 }
-	
+
 	ul.tabs li.active {
-		
+
 	}
 
 	.percent-blog, #percent-sidebar {
@@ -483,7 +483,7 @@
 		margin: 0;
 		clear:both;
 	}
-	
+
 	.page-title-subtitle h2 {
 		line-height: 50px;
 	}
@@ -496,20 +496,20 @@
 	ul#mainnav {
 		padding-top: 0;
 		width: 100%;
-	
+
 		margin-right: 0;
 }
-	
+
 	ul#mainnav > li {
 		background: none;
 		width: 100%;
 		border-bottom: 1px solid #EFEFEF;
 	}
-	
+
 	ul#mainnav > li:last-child {
 		border: 0;
 	}
-	
+
 	 ul#mainnav li a {
 		padding: 9px 0;
 		display: block;
@@ -517,7 +517,7 @@
 		height: auto;
 		line-height: inherit;
 }
-	
+
 	ul#mainnav li ul {
 		display: block !important;
 		position: relative;
@@ -528,7 +528,7 @@
 		border-top: 1px solid #EFEFEF;
 		background: transparent;
 }
-	
+
 	ul#mainnav li ul li a, ul#mainnav li ul li ul li a, ul#mainnav li ul li a:visited, ul#mainnav li ul li a:active	 {
     width: 100%;
     padding: 9px 0;
@@ -545,19 +545,18 @@
 		clear: both;
 		margin-bottom: 0px;
 	}
-	
+
 	#header .centered-wrapper {
-		position: relative;
 	}
-	
+
 	#header {
 		width: 100%;
 	}
-	
+
 	#header .percent-one-fourth {
 		margin-bottom: 0px;
 	}
 
-	
-	
+
+
 }
