--- a/style.css
+++ b/style.css
@@ -1394,10 +1394,8 @@ h3.service {
 	text-transform:uppercase;
 	padding-top:18px;
 	margin-bottom:3px;
-	margin-right: -50px;
 	display: block;
 	position: relative;
-	width: 200px;
 }
 
 .team-text h3 span {
@@ -3406,14 +3404,19 @@ ul.customlist li i {
 	text-align: center;
 }
 
+
+.team-text p h3 h5{
+	max-width: 100%;
+}
 /*Media Queries*/
 @media (max-device-width: 1280px ) {
 	.team .team-text p {
-		height: 65px;
+		height: 80px;
 	}
 }
 @media (max-device-width: 1024px ) {
 	#couple .team-text p {
+		height: 95px;
 	}
 
 #couple .percent-one-third{
@@ -3424,12 +3427,22 @@ ul.customlist li i {
 	#team .team .team-text p {
 		height: 100px;
 	}
-	.nav-btn{
+	#header  div  a{
 		margin-top: -15px;
+		color: green;
+	}
+
+	#header  div  a  i{
+		color: pink;
 	}
 	.store-avatar{
 		max-width: 230px;
 	}
+}
+@media (max-device-width: 768px ){
+	div.team   h3{
+	max-width: 100%;
+}
 }
 
 /*#couple div .centered-wrapper{
